# prototypes

./: index.html
clueless/: Cargo.toml  Makefile.toml  README.md
clueless/clueless-client/: Cargo.toml
clueless/clueless-client/src/: join_room.rs  lib.rs  register.rs
clueless/clueless-common/: Cargo.toml
clueless/clueless-common/src/: lib.rs
clueless/clueless-server/: Cargo.toml
clueless/clueless-server/src/: game.rs  main.rs  user.rs
clueless/src/: game.rs  main.rs  routes.rs  user.rs
css/: main.css
flask-prototype/: README.md  server.py
flask-prototype/static/css/: main.css
flask-prototype/static/js/: main.js
flask-prototype/templates/: base.html  gameroom.html  index.html
proto01/: index.html
proto01/js/: main.js
proto02/: index.html
proto02/css/: main.css
proto02/js/: main.js
python-messages/: message.py
