[package]
name = "clueless-client"
version = "0.1.0"
authors = ["Ken Johnson <ken.johnso93@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clueless-common = { path = "../clueless-common" }
yew = "0.17"
wasm-bindgen = "0.2.67"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"