[package]
name = "clueless-server"
version = "0.1.0"
authors = ["Ken Johnson <ken.johnso93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
uuid = { version = "0.8", features = ["v4"] }
derive_more = "0.99"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
bincode = "1.3"
serde_json = "1"

clueless-common = { path = "../clueless-common" }